--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,281 @@
-.App {
+*{
+  font-family: 'Oswald', sans-serif;
+}
+body{
+  margin: none;
+  width: 100%;
+}
+
+/* Login */
+.login_wrapper{
+  margin-top: 12%;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-self: center;
+  font-family: 'Oswald', sans-serif;
+}
+
+.login_btn{
+  background-color: #4CAF50;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  -webkit-transition-duration: 0.4s; 
+  transition-duration: 0.4s;
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  width: 550px;
+}
+
+.login_btn:hover{
+  background-color: #6ed175;
+}
+
+/* Sign Up */
+.signup_container{
+  margin-top: 7%;
+  text-align: center;
+  width: 100%;
+  font-family: 'Oswald', sans-serif;
+}
+
+input{
+  font-family: 'Oswald', sans-serif;
+  width: 500px;
+  height: 30px;
+  border: none;
+  border-radius: 5px;
+  background-color: aliceblue;
+  padding: 10px 25px;
+  margin: 10px 2px;
+  font-size: 20px;
+  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.01), 0 12px 10px 0 rgba(0,0,0,0.09);
+}
+.sign_up_btn{
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 20px;
+  margin: 4px 2px;
+  cursor: pointer;
+  -webkit-transition-duration: 0.4s; /* Safari */
+  transition-duration: 0.4s;
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  width: 550px;
+}
+.sign_up_btn:hover{
+  background-color: #6ed175;
+}
+
+.slLink{
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+/* Navbar */
+body{
+  height: 100vh;
+  background-image: url('https://i.postimg.cc/rmhr1M3T/floating-book.jpg');
+  background-size: contain;
+  /* background-repeat: no-repeat; */
+  font-family: sans-serif;
+  margin-top: 80px;
+  padding: 30px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+main {
+  color: white;
+}
+
+.main-logo{
+  width: 75px;
+  height: 40px;
+  margin-left: 10px;
+}
+
+
+.link{
+  text-decoration: none;
+  margin: 20px;
+  font-family: 'Oswald', sans-serif;
+  color: black;
+}
+
+header {
+  background-color: white;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 80px;
+  display: flex;
+  align-items: center;
+  box-shadow: 0 0 25px 0 black;
+}
+
+.log_out_btn{
+  width: 100px;
+  height: 50px;
+  border: none;
+  border-radius: 5px;
+  font-size: 18px;
+  font-family: 'Oswald', sans-serif;
+  position: absolute;
+  right: 50px;
+  top: 15px
+}
+
+.log_out_btn:hover{
+  background-color: rgb(216, 170, 170);
+  color: azure;
+}
+
+header * {
+  display: inline;
+}
+
+
+/* Input Post section */
+.post-form-container{
+  text-align: center;
+  width: 100%
+}
+
+.post-form{
+  width: 100%;
+}
+
+.title-input{
+  width: 45%;
+  border-color: hsl(var(--input-focus-h), var(--input-focus-s), var(--input-focus-l));
+  box-shadow: 0 0 0 3px hsla(var(--input-focus-h), var(--input-focus-s), calc(var(--input-focus-l) +
+        40%), 0.8);
+  transition: 180ms box-shadow ease-in-out;
+  outline: 3px solid transparent;
+}
+
+.content-input{
+  width: 50%;
+  height: 400px;
+  padding: 12px 20px;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  background-color: #f8f8f8;
+  resize: none;
+  font-size: 20px;
+}
+
+.tags-input{
+  width: 45%;
+  border-color: hsl(var(--input-focus-h), var(--input-focus-s), var(--input-focus-l));
+  box-shadow: 0 0 0 3px hsla(var(--input-focus-h), var(--input-focus-s), calc(var(--input-focus-l) +
+        40%), 0.8);
+  transition: 180ms box-shadow ease-in-out;
+  outline: 3px solid transparent;
+}
+
+
+/* Post section */
+.postContainer{
+  margin: 20px;
+  background-color: #8d887f;
+  width: 270px;
+  height: 275px;
+  border-radius: 10px;
+  box-shadow: 0 20px 20px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  color: black;
+  text-align: center;
+}
+
+.postContainer button{
+  border: none;
+  text-decoration: underline;
+}
+
+.all-posts-section{
+  width: 90%;
+}
+
+.home-post-container{
+  border: 1px groove;
+  margin: 20px;
+  background-color: #8d887f;
+  box-shadow: 0 20px 20px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+.post-content-home{
+  width: 90%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.users-posts-content{
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.postLists{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.read_more_btn{
+  border: none;
+  margin: 10px;
+  height: 30px;
+}
+
+/* Landing page */
+
+.home-container{
+  width: 90%;
+}
+
+.landing-page{
+  width: 100%;
+  height: 300px;
+  border-radius: 30px;
+}
+.landing-page-message{
+  margin: auto;
+  width: 90%;
+  height: 80%;
+  /* box-shadow: 0 20px 20px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19); */
+  font-family: 'Tiro Devanagari Sanskrit', serif;
+}
+.landing-message{
+  color: #ffffff;
+  margin: 50px;
+}
+.home-link-signup{
+  text-decoration: none;
+  background-color: #4CAF50;
+  border: 17px solid #4CAF50;
+  border-radius: 3px;
+  color: #000000;
+  box-shadow: 0 20px 20px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  margin: 50px;
+}
+
+.search-filter{
+  width: 10%;
+}
+
+
+.filtered-result{
+  margin: 20px;
+  border: 1px solid white;
+  border-radius: 30px;
+  background-color: #61594e;
 }
